--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-<h1>Hello jekyll</h1>
-<p>This is the index page</p>
+
+<nav class="topNav">
+	
+</nav>
 <p>My post list:</p>
 <ul>
    {% for post in site.posts %}
