--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 layout: default
 ---
 
-<nav class="topNav">
-	
-</nav>
-<p>My post list:</p>
-<ul>
-   {% for post in site.posts %}
-       <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-   {% endfor %}
-</ul>
 
+<div>
+	
+</div>
