--- a/_posts/2015-05-27-second-post.html
+++ b/_posts/2015-05-27-second-post.html
@@ -1,7 +1,8 @@
 ---
-layout: default
-title: my first post
+layout: post
+title: 你好，旅行者
+category: hello
 ---
-<h1>{{ page.title }}</h1>
+
 <p>This is my first post.Click the link below to go back to index:</p>
 <a href="{{ site.baseurl }}/index.html">Go back</a>
