--- a/_posts/2016-04-27-first-post.html
+++ b/_posts/2016-04-27-first-post.html
@@ -1,7 +1,8 @@
 ---
-layout: default
-title: my second post
+layout: post
+title: 我的博客建立了
+category: world
 ---
-<h1>{{ page.title }}</h1>
+
 <p>This is my first post.Click the link below to go back to index:</p>
 <a href="{{ site.baseurl }}/index.html">Go back</a>
