--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@ id: about
 
 	<h2>如果你对我有兴趣，欢迎戳下面任何一个：</h2>
 	<ul>
-		<li><a href="https://github.com/zibiaowu" target="_blank" class="iconfont">&#xe61d;GitHub</a></li>
-		<li><a href="http://weibo.com/1956991773/profile?topnav=1&wvr=6&is_all=1" target="_blank" class="iconfont">&#xe61c;新浪微博</a></li>
-		<li class="iconfont">&#xe61e;邮箱：zibiao-xd@foxmail.com</li>
+		<li><a href="https://github.com/zibiaowu" target="_blank"><span class="iconfont">&#xe61d;</span>GitHub</a></li>
+		<li><a href="http://weibo.com/1956991773/profile?topnav=1&wvr=6&is_all=1" target="_blank"><span class="iconfont">&#xe61c;</span>新浪微博</a></li>
+		<li><span class="iconfont">&#xe61e;</span>邮箱：zibiao-xd@foxmail.com</li>
 	</ul>
 	
 	<h2>关于本站：</h2>
