menu bug remove

--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@ id: about
 	<ul>
 		<li><a href="https://github.com/zibiaowu" target="_blank"><span class="iconfont">&#xe61d;</span>GitHub</a></li>
 		<li><a href="http://weibo.com/1956991773/profile?topnav=1&wvr=6&is_all=1" target="_blank"><span class="iconfont">&#xe61c;</span>新浪微博</a></li>
+		<a name="Email"></a>
 		<li><span class="iconfont">&#xe61e;</span>邮箱：zibiao-xd@foxmail.com</li>
 	</ul>
 	
